--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 description: WELCOME TO THE HOME OF THE CODE SYNC FAMILY OF CONFERENCES AND TRAINING
-keywords: Code Sync, conferences, training, Code BEAM SF, Code BEAM STO, Code Mesh LDN, Code BEAM Lite, Code Elixir LDN, Erlang, Elixir, alternative tech, BEAM, Joe Armstrong, Francesco Cesarini
+keywords: Code Sync, conferences, training, Code BEAM, Code BEAM Lite, Erlang, Elixir, Gleam, BEAM
 twitter_site: CodeBEAMio
 twitter_image: http://codesync.global/uploads/media/seo/0001/01/c476b093a0062ae0167ed6d9f4d7d4bd9024157d.png
 og_image: http://codesync.global/uploads/media/seo/0001/01/c476b093a0062ae0167ed6d9f4d7d4bd9024157d.png
@@ -10,13 +10,9 @@ og_image: http://codesync.global/uploads/media/seo/0001/01/c476b093a0062ae0167ed
 
 {% include header.html %}
 <main class="homepage">
-    {% include video_container.html %}
-    {% include notification_cookie.html %}
-    {% include welcome_section.html %}
-    {% include newest_articles.html %}
-    {% include next_conference.html %}
-    {% include stay_in_touch.html %}
-    {% include upcoming_conferences.html %}
-    {% include contact.html %}
+    {% include video_container.html %} {% include notification_cookie.html %} {%
+    include welcome_section.html %} {% comment %} {% include stay_in_touch.html
+    %} {% endcomment %} {% comment %} {% include contact.html %} {% endcomment
+    %}
 </main>
 {% include footer.html %}
