--- a/opportunity-scheme.html
+++ b/opportunity-scheme.html
@@ -8,55 +8,148 @@ twitter_image: http://codesync.global/assets/img/social-image.jpg
 og_image: http://codesync.global/assets/img/social-image.jpg
 head_title: "DIVERSITY & INCLUSION"
 head_desc: "WE ARE PLEASED TO ANNOUNCE THAT CODE SYNC"
-head_desc_2: "HAS IMPLEMENTED A DIVERSITY & INCLUSION SCHEME!"
+head_desc_2: "HAS IMPLEMENTED A GLOBAL COMMUNITY SUPPORT SCHEME!"
 ---
+
+<style>
+.banner--scholarship.vp--100.mh--100vh {
+    min-height: 40vh !important;
+    height: 40vh !important;
+    max-height: 40vh !important;
+}
+.banner--scholarship .container--small {
+    height: auto !important;
+}
+.banner--scholarship .mt--120 {
+    margin-top: 20px !important;
+}
+.banner--scholarship .mt--10 {
+    margin-top: 0px !important;
+}
+.banner--scholarship .arrow--box {
+    position: relative !important;
+    bottom: auto !important;
+    margin-top: 20px !important;
+    transform: none !important;
+    left: auto !important;
+}
+/* Make the BEAM community paragraph font smaller */
+.scholarship__goal * {
+    font-size: 18px !important;
+    line-height: 1.7 !important;
+}
+@media screen and (max-width: 767px) {
+    .scholarship__goal * {
+        font-size: 14px !important;
+    }
+}
+</style>
+
 {% include header.html %}
 <main>
     {% include head_title_2.html %}
-    <section class="anchor__submenu section-container scholarship section--spaced" id="Process">
+    <section
+        class="anchor__submenu section-container scholarship section--spaced"
+        id="Process"
+    >
         <div class="container--small">
             <div class="grid-gap-100">
                 <div class="row mt--30 row__desc">
                     <div class="col-12 scholarship__goal">
-                        <div class="paragraph paragraph--robotomono scholarship__goal">
+                        <div
+                            class="paragraph paragraph--robotomono scholarship__goal"
+                        >
                             <p>
-                                The BEAM community is one of the most friendly and helpful tech communities out there but, much as the rest of the tech world, it&#39;s nowhere near as diverse as its members would wish it to be. Code Sync is addressing this problem and commits to building a technology scene where everybody, regardless of their gender, race, sexual orientation, religion, nationality, age, socioeconomic background etc. feels welcome and comfortable.
+                                The BEAM community is one of the most friendly
+                                and helpful tech communities out there but, much
+                                as the rest of the tech world, it&#39;s nowhere
+                                near as diverse as its members would wish it to
+                                be. Code Sync is addressing this problem and
+                                commits to building a technology scene where
+                                everybody, regardless of their gender, race,
+                                sexual orientation, religion, nationality, age,
+                                socioeconomic background etc. feels welcome and
+                                comfortable.
                             </p>
                             <p>
-                                The goal of scheme is to increase diversity of attendees and offer support to those in the tech community who would not otherwise be able to attend the conference.
+                                The goal of scheme is to increase diversity of
+                                attendees and offer support to those in the tech
+                                community who would not otherwise be able to
+                                attend the conference.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="row row__process">
                     <div class="col-12 scholarship__process m-mb-30">
-                        <div class="col-5 scholarship__arrow  m-col-12">
-                            <h2 class="heading heading--big pink medium">APPLICATION</h2>
+                        <div class="col-5 scholarship__arrow m-col-12">
+                            <h2 class="heading heading--big pink medium">
+                                APPLICATION
+                            </h2>
                         </div>
                         <div class="col-7 m-col-12">
-                            <div class="paragraph paragraph--robotomono medium content">
-                                <p>If you wish to apply for Diversity Ticket, please fill in the form below. All application information will be kept confidential.</p>
-                                <p>The Diversity Scheme is primarily aimed at (but not restricted to) women, people from ethnic minorities and people with disabilities who would otherwise not be able to attend the conference.</p>
+                            <div
+                                class="paragraph paragraph--robotomono medium content"
+                            >
+                                <p>
+                                    If you wish to apply for a ticket, please
+                                    fill in the form via a form on your chosen
+                                    conference's website. All application
+                                    information will be kept confidential.
+                                </p>
+                                <p>
+                                    The Global Community Support Scheme helps
+                                    broaden access to the conference, offering
+                                    support to individuals, startups, and those
+                                    transitioning to Erlang, Elixir and Gleam.
+                                    It provides opportunities to gain insights,
+                                    connect with the community, and explore the
+                                    latest in BEAM technologies. The programme
+                                    aims to empower those who may not otherwise
+                                    be able to attend, offering support and
+                                    access to the latest insights in the Erlang
+                                    ecosystem.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 scholarship__process m-mb-30">
                         <div class="col-5 scholarship__arrow m-col-12">
-                            <h2 class="heading heading--big pink medium">SELECTION</h2>
+                            <h2 class="heading heading--big pink medium">
+                                SELECTION
+                            </h2>
                         </div>
                         <div class="col-7 m-col-12">
-                            <div class="paragraph paragraph--robotomono medium content">
-                                <p>A committee will review applications on individual basis. All committee members will sign a confidentiality agreement to protect the anonymity of applicants. We will do our best to meet as many applications as possible.</p>
+                            <div
+                                class="paragraph paragraph--robotomono medium content"
+                            >
+                                <p>
+                                    A committee will review applications on
+                                    individual basis. All committee members will
+                                    sign a confidentiality agreement to protect
+                                    the anonymity of applicants. We will do our
+                                    best to meet as many applications as
+                                    possible.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 scholarship__process">
                         <div class="col-5 m-col-12">
-                            <h2 class="heading heading--big pink medium">AWARDS</h2>
+                            <h2 class="heading heading--big pink medium">
+                                AWARDS
+                            </h2>
                         </div>
                         <div class="col-7 m-col-12">
-                            <div class="paragraph paragraph--robotomono medium content">
-                                <p>Awarded applicants will receive a registration ticket for a relevant conference of their choice.&nbsp;The scheme does not cover the accomodation and travel.</p>
+                            <div
+                                class="paragraph paragraph--robotomono medium content"
+                            >
+                                <p>
+                                    Awarded applicants will receive a
+                                    registration ticket for a relevant
+                                    conference of their choice.&nbsp;The scheme
+                                    does not cover the accomodation and travel.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -64,7 +157,7 @@ head_desc_2: "HAS IMPLEMENTED A DIVERSITY & INCLUSION SCHEME!"
             </div>
         </div>
     </section>
-    {% include apply.html %}
+    <!-- {% include apply.html %}
     <section class="anchor__submenu whoweare section-container section--spaced" id="">
         <div class="container--small">
             <div class="grid-gap-100">
@@ -108,6 +201,8 @@ head_desc_2: "HAS IMPLEMENTED A DIVERSITY & INCLUSION SCHEME!"
         </div>
     </section>
     {% include diversity_sponsors.html %}
-    {% include got_questions.html %}
+    {% include got_questions.html %} -->
 </main>
 {% include footer.html %}
+</parameter>
+</invoke>
