--- a/sponsorship.html
+++ b/sponsorship.html
@@ -10,7 +10,26 @@ head_title: "SPONSORSHIP"
 head_subtitle: "LEARN ABOUT ALL SPONSORSHIP OPPORTUNITIES"
 bg_image:
 ---
-
+<style>
+.banner.vp--100.mh--100vh {
+    min-height: 40vh !important;
+    height: 40vh !important;
+    max-height: 40vh !important;
+}
+.banner .container--small {
+    height: auto !important;
+}
+.banner .mt--120 {
+    margin-top: 20px !important;
+}
+.banner .arrow--box {
+    position: relative !important;
+    bottom: auto !important;
+    margin-top: 20px !important;
+    transform: none !important;
+    left: auto !important;
+}
+</style>
 {% include header.html %}
 <main class="sponsorship">
     {% include head_title_3.html %}
@@ -32,7 +51,7 @@ bg_image:
                         </ul>
                     </div>
                     <div class="col-4 t-col-6 m-col-12 t-mt-80 m-mt-40">
-                        <h2>OUR COMMITMENT</h2>
+                     <!--    <h2>OUR COMMITMENT</h2>
 
                         <p>Our events have helped super brands such as WhatsApp, Klarna, Machine Zone, AdRoll, Ericsson, Bet365, Grindr and Visa to hire and train new teams.</p>
                     </div>
@@ -65,7 +84,7 @@ bg_image:
                             </ul>
                         </div>
                     </div>
-                </div>
+                    </div> -->
             </div>
         </div>
     </section>
@@ -124,9 +143,11 @@ bg_image:
                         <p>We have three levels of sponsorship available which deliver various levels of engagement and brand awareness. These are:</p>
 
                         <ul>
+                            <li>DIVERSITY & INCLUSION/COMMUNITY SUPPORT</li>
                             <li>PLATINUM</li>
                             <li>GOLD</li>
                             <li>SILVER</li>
+
                         </ul>
 
                         <p>
@@ -136,15 +157,15 @@ bg_image:
                     <div class="col-6 m-col-12 right">
                         <p>Additional opportunities are available to further enhance the sponsorship experience and we are also very open to any promotional ideas you may have and will try where possible to make these ideas happen.</p>
 
-                        <p>Please contact our conference team for a sponsorship brochure or more info&nbsp;<a href="mailto:sponsorship@codesync.global">sponsorship@codesync.global</a>
+                        <p>Please contact our conference team for a sponsorship brochure or more info&nbsp;<a href="mailto:info@codesync.global">info@codesync.global</a>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    {% include sponsors.html %}
-    {% include got_questions.html %}
+   <!--  {% include sponsors.html %}
+    {% include got_questions.html %} -->
     {% include upcoming_conferences.html %}
 </main>
 {% include footer.html %}
