--- a/past-conferences/index.html
+++ b/past-conferences/index.html
@@ -27,8 +27,11 @@ head_title: Conferences
                     </div>
 
                     <div class="row">
-                        {% for conference in site.conferences %} {% if
+                        {% assign these_conferences = site.conferences | sort:
+                        'conference_init_date' %} {% for conference in
+                        these_conferences reversed %} {% if
                         conference.conference_brand == conference_brand.path %}
+                        {% if conference.past == true %}
                         <div class="column js-column mb--50">
                             <div class="tile tile--old">
                                 <a
@@ -66,7 +69,7 @@ head_title: Conferences
                                 >
                             </div>
                         </div>
-                        {% endif %} {% endfor %}
+                        {% endif %} {% endif %} {% endfor %}
                     </div>
                 </div>
             </div>
